force-app/main/default/objects/AV_Book__c/AV_Book__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene el detalle de las carteras de los gestores</description>
    <label>Cartera</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carteras</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>