force-app/main/default/objects/AV_Book__c/fields/AV_Activa__c.field-meta.xml
<CustomField>
    <fullName>AV_Activa__c</fullName>
    <description>Si está activa la cartera</description>
    <label>Activa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>