force-app/main/default/objects/AV_Book__c/fields/AV_Centro__c.field-meta.xml
<CustomField>
    <fullName>AV_Centro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro de la cartera</description>
    <label>Centro</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carteras</relationshipLabel>
    <relationshipName>Carteras</relationshipName>
    <type>Lookup</type>
</CustomField>