force-app/main/default/objects/AV_Book__c/fields/AV_EspecialidadCartera__c.field-meta.xml
<CustomField>
    <fullName>AV_EspecialidadCartera__c</fullName>
    <description>Especialidad de la cartera</description>
    <label>Especialidad  Cartera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Asesoramiento A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Intouch</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Negocios (Subdirector - 2º Responsable)</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Negocios (Gestor)</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Empresas (DBE)</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Empresas (Gestor-CE)</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Inmobiliario</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Non-Core</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Asesoramiento C</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Empresas (Grandes Empresas)</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Micros (Director)</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Micros (Gestor)</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Especialista</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Micros (Multicartera)</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Empresas (DCE)</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Empresas (Inversores)</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Empresas (Growth/Scale up)</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Empresas (Early Stage)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Asesoramiento B</label>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Negocios (Micro-DO)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Negocios (Micro-Gestor)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Negocios (Micro-Multicartera)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>