force-app/main/default/objects/AV_Book__c/fields/AV_Negocio__c.field-meta.xml
<CustomField>
    <fullName>AV_Negocio__c</fullName>
    <description>Negocio de la cartera</description>
    <label>Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AV_Negocio</valueSetName>
    </valueSet>
</CustomField>