force-app/main/default/objects/AV_Book__c/fields/AV_TipoCartera__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoCartera__c</fullName>
    <description>Tipo de la cartera</description>
    <label>Tipo de cartera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMP</fullName>
                <label>Banca Empresas</label>
            </value>
            <value>
                <fullName>COR</fullName>
                <label>Banca Corporativa</label>
            </value>
            <value>
                <fullName>BPR</fullName>
                <label>Banca Privada. Gestor</label>
            </value>
            <value>
                <fullName>BAI</fullName>
                <label>Banca Privada Independiente</label>
            </value>
            <value>
                <fullName>BPJ</fullName>
                <label>Banca Privada. Jurídicas</label>
            </value>
            <value>
                <fullName>BPE</fullName>
                <label>Banca Premier</label>
            </value>
            <value>
                <fullName>PYM</fullName>
                <label>Banca Pimes</label>
            </value>
            <value>
                <fullName>NEG</fullName>
                <label>Negocios</label>
            </value>
            <value>
                <fullName>CIB</fullName>
                <label>Corporate Institutions Banking</label>
            </value>
            <value>
                <fullName>MIC</fullName>
                <label>Banca Emprendedores</label>
            </value>
            <value>
                <fullName>PRO</fullName>
                <label>Banca Promotores</label>
            </value>
            <value>
                <fullName>BPO</fullName>
                <label>Banca Privada. Oficina</label>
            </value>
            <value>
                <fullName>IBE</fullName>
                <label>Banca Premier - IBE</label>
            </value>
            <value>
                <fullName>BIR</fullName>
                <label>Banca Priv. Indep. Relacionada</label>
            </value>
            <value>
                <fullName>BIO</fullName>
                <label>Banca Priv. Indep. Oficina</label>
            </value>
            <value>
                <fullName>INE</fullName>
                <label>Negocios-INE</label>
            </value>
            <value>
                <fullName>IMI</fullName>
                <label>Banca Emprendedores - IMI</label>
            </value>
            <value>
                <fullName>INT</fullName>
                <label>Internacional</label>
            </value>
            <value>
                <fullName>INB</fullName>
                <label>Internacional. Bancos</label>
            </value>
            <value>
                <fullName>CON</fullName>
                <label>Caixabank Consumer Finance</label>
            </value>
            <value>
                <fullName>SEG</fullName>
                <label>Seguros</label>
            </value>
            <value>
                <fullName>AGE</fullName>
                <label>Life</label>
            </value>
            <value>
                <fullName>TES</fullName>
                <label>Especialista Tesorería</label>
            </value>
            <value>
                <fullName>FIN</fullName>
                <label>Especialista Financiación</label>
            </value>
            <value>
                <fullName>BCO</fullName>
                <label>Bancos corresponsales</label>
            </value>
            <value>
                <fullName>MOR</fullName>
                <label>Especialista Morosidad</label>
            </value>
            <value>
                <fullName>RIE</fullName>
                <label>Analista de Risc</label>
            </value>
            <value>
                <fullName>POT</fullName>
                <label>Clientes Potenciales</label>
            </value>
            <value>
                <fullName>OFI</fullName>
                <label>Con EAP</label>
            </value>
            <value>
                <fullName>EAP</fullName>
                <label>Asignación prioritaria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>