force-app/main/default/objects/AV_Book__c/recordTypes/AV_Cartera.recordType-meta.xml
<RecordType>
    <fullName>AV_Cartera</fullName>
    <active>true</active>
    <description>Cartera</description>
    <label>Cartera</label>
</RecordType>